--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,7 @@ body.hide_completed .completed {
   display: none !important;
 }
 
-.hide_ordinary, .hide_common, .hide_uncommon, .hide_rare, .hide_very_rare, .hide_legendary, .hide_story {
+.hide_ordinary, .hide_common, .hide_uncommon, .hide_rare, .hide_very_rare, .hide_legendary, .hide_soul_coins, .hide_story {
   display: none !important;
 }
 
